# guesture_detection

./: README.md
mp/: body_decoder.py  body_language.pkl  coords.csv  live_show.py  pyproject.toml  train.py
