[tool.poetry]
name = "sunhaoyue"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
mediapipe = "0.10.9"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
opencv-python = "^4.9.0.80"
importlib-metadata = "3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
